--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.22.1",
-    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "nuxt": "^4.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7"
   }
 }
